# SoftMaskedBert

./: pyproject.toml
src/: bert_dataset.py  optim_schedule.py  trainer.py
src/models/: decotor.py  soft_masked_bert.py
