[tool.poetry]
name = "softmaskedbert"
version = "0.1.0"
description = ""
authors = ["Timur Kasimov <tkasimov@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = ">=2.0.0"
numpy = "^1.24.3"
transformers = "^4.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
